--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,13 @@
 
 .container-icon-cart {
     margin-right: 70px;
-    width: 40px;
+    width: 60px;
     height: 40px;
     display: flex;
-    color: rgb(15,74,121);
+    color: rgb(15, 74, 121);
 }
-.container-icon-cart:hover{
+
+.container-icon-cart:hover {
     color: blueviolet;
 }
 
@@ -34,21 +35,19 @@
     height: 18px;
 }
 
-.num-cart{
-background-color: rgb(161, 233, 53);
-position: absolute;
-right: 94px;
-top: 19px;
-font-size: 16px;
-border-radius: 100px;
-width: 1.5em;
-height: 1.3em;
-font-family: 'Roboto Mono', monospace;
+.num-cart {
+    background-color: rgb(161, 233, 53);
+    font-size: 16px;
+    border-radius: 100px;
+    width: 1.5em;
+    height: 1.3em;
+    font-family: 'Roboto Mono', monospace;
 }
 
-.btn-nav{
+
+.btn-nav {
     font-size: 16px;
-    color: rgb(15,74,121);
+    color: rgb(15, 74, 121);
 }
 
 .navbar-nav .nav-item {
@@ -62,7 +61,7 @@ font-family: 'Roboto Mono', monospace;
     left: 0;
     width: 0;
     height: 2px;
-    background-color: rgb(15,74,121);
+    background-color: rgb(15, 74, 121);
     transition: width 0.2s ease-in-out;
 }
 
@@ -70,7 +69,7 @@ font-family: 'Roboto Mono', monospace;
     width: 100%;
 }
 
-.btn-nav:hover{
+.btn-nav:hover {
     width: 100%;
     right: 0;
     color: blueviolet;
@@ -88,66 +87,119 @@ font-family: 'Roboto Mono', monospace;
     align-items: center;
     margin-bottom: 15px;
 }
-.card-img{
+
+.card-img {
     width: 289;
     height: 380px;
     display: flex;
     justify-content: center;
 }
-.card-body{
+
+.card-body {
     margin: 0px;
     padding: 0px;
 }
 
-.btn-color{
-    background-color: rgb(15,74,121);
+.btn-color {
+    background-color: rgb(15, 74, 121);
 }
-.btn-color2{
-background-color: white;
-color: rgb(15,74,121);
-border: 3px solid rgb(15,74,121);;
+
+.btn-color2 {
+    background-color: white;
+    color: rgb(15, 74, 121);
+    border: 3px solid rgb(15, 74, 121);
+    ;
 }
-.btn-color:hover, .btn-color2:hover{
+
+.vectorex{
+    margin-left: 18px;
+}
+
+.vectorex-cart{
+    margin-left: 38px;
+}
+
+.btn-color:hover,
+.btn-color2:hover {
     background-color: blueviolet;
     border: blueviolet;
 }
 
-.card-title, .card-text{
+.card-title,
+.card-text {
     margin-left: 10px;
 }
 
 
+
 /* CART */
-.img-cart{
+.img-cart {
     width: 8.5rem;
     height: 10.5rem;
 }
 
-.card-products{
+.card-products {
     max-width: 650px;
 }
+
 .align-middle {
     vertical-align: middle;
 }
 
-.text-elements{
+.text-elements {
     font-size: 14px;
 }
-.title-elements{
+
+.title-elements {
     font-size: 19px;
 }
-.margin-main{
+
+.margin-main {
     margin-top: 90px;
 }
 
-.none{
+.none {
     display: none;
 }
-.container-elements{
-margin-bottom: 80px;    
+
+.container-elements {
+    margin-bottom: 80px;
+}
+
+.btn-cart{
+border: 0px;    
+background-color: white;
+height: 40px;
+}
+
+.btn-cart-2{
+background-color: rgb(15, 74, 121);
+border-radius: 15px;
+height: 30px;
+
+}
+
+.btn-cart-2:hover{
+    background-color: blueviolet;
+}
+
+.delete-product{
+    border-radius: 5px;
 }
 
 
+@media (max-width: 578px) {
+    .container-icon-cart {
+        margin-right: -9px;
+    }
+    .vectorex, .vectorex-cart{
+        margin-left: 0px;
+    }
+    .btn-cart{
+        font-size: 13px;
+    }
+    .text-buttons{
+        font-size: 17px;
+    }
 
-
-
+}
